<resources>
    <string name="app_name">NCBA_Project_Program</string>
    <string name="article_text_event_one">Donating blood is a great help to those in need of life-saving support. NCBA-Fairview conducted a blood donation drive under the leadership of Community Outreach program (COP), the Office of Student Affairs (OSA), and our partnership with the Philippine Children’s Medical Center (PCMC). We were able to collect 45 bags of blood, which is a significant contribution to helping those in need.\n\n#BloodDonation\n#SaveLives</string>
    <string name="article_text_event_three">On February 12, 2025, NCBA Taytay warmly welcomed senior high school students from various schools in Rizal for an Open House Campus Tour. This exciting event offered a unique glimpse into the heart of NCBA Taytay. Attendees enjoyed registration and giveaways, followed by an all-encompassing tour led by department heads and organization presidents. They were introduced to each office and facility, culminating in a general information quiz bee held at the Hospitality Management department’s function hall.</string>
    <string name="article_text_event_four">A night of music and lights hyped the students of NCBA Taytay as the most awaited highlight of the foundation day began through the clash of talent and passion in music in the Battle of the Bands 2025. Congratulations to the Business Administration Society for winning the championship, to the Unified Computer Society for winning the runner-up, and to the Junior Philippine Institute of Accountants for winning the 3rd place. Truly, your unwavering dedication and overflowing talent for music graced the celebration of this year’s anniversary.</string>
    <string name="article_text_event_five">The NCBA-TAYTAY COP Department launched a program for the Adopted Community and the esteemed kindergarten students of Brgy. San Juan, Taytay. Objective of community outreach to donate bags to students to support their educational journey by providing essential resources.\n\nPresent were officials from the Chief Executive Officer, Dean, Program Heads, Faculty, Staff, and Volunteer Students.\n\nCOP donated 50 bags for the pupils in partnership with the Junior Chamber International (JCI) and Major Sponsor the Masons of California. It is a great honor to give these small gifts to the children to support their continued education.</string>
    <string name="article_text_event_six">Second Year Bread and Pastry Students Cookies Practical National College of Business and Arts.</string>
    <string name="article_text_event_seven">Heads Up, NCBA College Seniors!\n\nOur Job Fair is here with an array of unique opportunities specifically curated for the ambitious graduating students like you!\nGet ready to network and engage with the front-running companies hailing from diverse sectors including marketing, finance, and many more! 🎓\n\nMark your calendars for this game-changing event.\nMay 10, 2024 (Friday)\n9:00 am – 4:00 pm\nFounders Hall, NCBA Fairview\n\nThis event is brought to you by the Guidance and Counseling Center together with the Marketing &amp; Placement and College Department of NCBA in collaboration with JOBS180 to provide you a golden chance to scout potential employers, learn more about the industry, and showcase your talents.\n\nWe are here to assist you in landing your dream job, so let’s kickstart your career journey together. 🚀\n\nSee you all there, Seniors!</string>
    <string name="article_text_event_eight">Last April 25, 2024, a thought-provoking webinar titled “The Rise of Digitalization: Impact of Digital Services in the Financial Sector” was orchestrated by third-year Financial Management students, under the guidance of Prof. Rozano P. Medina.\n\nThis webinar dissected three crucial topics: The role of Digital Services in the Financial Sector, Social Impact of Digitalization, and Cybersecurity and Fraud Prevention in Digital Services. Distinguished speakers masterfully explored each topic: Ms. Trexia Olaya, Ms. Gretchen Veran, and Mr. Ruderey Mendoza.\n\nThrough their enlightening presentations and the active engagement of participants, the webinar catalyzed understanding of the seismic shifts brought about by technology in the financial sector. It provided a rich tapestry of insights, delving into how digital services are revolutionizing both financial institutions and the experience of consumers.</string>
    <string name="article_text_event_nine">Ethical Hacking Seminar\nBSCS Faculty members and students – Taytay Campus\nApril 19,2024\n\nA day filled with achievement and success. We extend our gratitude to the Department Head of Computer Science and Information System Mr. Julius Salonga as our speaker for sharing his knowledge and skills to our faculty members and students. It was truly enlightening to learn about the basics and fundamentals of Ethical hacking and Cybercrime law.</string>
    <string name="AboutUsBriefHistoryFirstStatement">
        In 1968, at the corner of R. Papa and Lepanto streets, between the two giants in Philippine private education (University of the East with its mammoth population of 65,000 and Far Eastern University with 47,000 enrollees), a small building was erected to house a small school – National College of Business and Arts (N.C.B.A).
    </string>
    <string name="AboutUsBriefHistorySecondStatement">
        NCBA’s founder was the late Dr. Doroteo S. Pasion, a well-known educator (former Dean of Commerce of San Beda College, former CPA Review Director of the University of the East, and former President of PSBA), lawyer, accountant, author and civic leader. Dr. Pasion launched NCBA as a public service together with four others who believed in the NCBA concept: Col. Rafael Q. Yap-Diangco, Atty. Jose R. Torres, Mrs. Gloria C. Meñez and Mrs. Lourdes L. Sarabia.
    </string>
    <string name="AboutUsBriefHistoryThirdStatement">
        Keeping to its founder’s vision, NCBA opted to remain as a specialized school and its growth sustained and steady through the years. From a small edifice along R. Papa Street, NCBA slowly expanded its academic programs and facilities with the single purpose of producing for the Nation the type of educated manpower it needs for national development.
    </string>
    <string name="AboutUsBriefHistoryFourthStatement">
        When NCBA opened in 1968, its initial offerings were limited to the following courses: Bachelor of Science in Business Administration; Bachelor of Arts; a two-year course in Secretarial Administration; and its own CPA Review. The High School department was opened in School Year 1973-1974, followed by its additional offerings of short terminal courses in Cooperative; Salesmanship; Bookkeeping and Accounting; and Small Business Management in School Year 1974-1975.
    </string>
    <string name="AboutUsBriefHistoryFifthStatement">
        Today, NCBA has a total of three campuses (Cubao, Taytay and Fairview) and boasts of a complete package of academic offerings from K-12 school to an expanded tertiary education program and graduate courses.
    </string>
    <string name="AboutUsBriefHistorySixthStatement">
        The three campuses of NCBA are PACUCOA accredited for its BSBA program to attest that the College has formal recognition of an educational program possessing high level of quality based on the analysis of the merits of its educational operations in attaining its objectives and its role in the community that it serves.
    </string>
    <string name="AboutUsBriefHistorySeventhStatement">
        Since its founding, NCBA has endeavored continually to perpetuate its educational policy to offer and provide both facilities and teaching force, a complete education for young men and women and equip them with the skills and training to become responsible citizens and future leaders of the country.
    </string>
    <string name="AboutUsNCBAHymnFirstStatement">
        Let’s stand erect, we’re proud that we are one\n
        We will stay through the rain and sunshine!\n
        Sing and sing the world will hear\n
        The name we hold so very dear
    </string>
    <string name="AboutUsNCBAHymnSecondStatement">
        N.C.B.A. Thy name shall ever live\n
        Thy fame and greatness forever.\n
        Shine, shine as a brilliant star\n
        Shine brightly evermore
    </string>
    <string name="AboutUsNCBAHymnThirdStatement">
        If your light shall ever become dim\n
        We will stand beside thee as men\n
        N.C.B.A.  N.C.B.A.\n
        Thy name shall ever stay
    </string>
    <string name="AboutUsNCBAHymnFourthStatment">
        Let’s stand erect, we’re proud that we are one\n
        We will stay through the rain and sunshine!\n
        Sing and sing the world will hear\n
        The name we hold so very dear
    </string>
    <string name="AboutUsNCBAHymnFifthStatment">
        N.C.B.A.  Thy name shall ever live\n
        Thy fame and greatness forever.\n
        Shine, shine as a brilliant star\n
        Shine brightly evermore
    </string>
    <string name="AboutUsNCBAHymnSixthStatment">
        If your light shall ever become dim\n
        We will stand beside thee as men\n
        N.C.B.A.  N.C.B.A.\n
        Thy name shall ever stay\n
        HURRAY!!!
    </string>
    <string name="collegiateStatementOneAccounting">
        Our curriculum is designed to provide students with the technical accounting knowledge and skills, and with the integration of professional values and work ethics that are essential to meet the rapidly changing demands and challenges of the accounting profession.
    </string>
    <string name="collegiateStatementTwoAccounting">
        Accounting continues to be a field with one of the highest demands for graduates. To meet this demand, the program has the following objectives:
    </string>
    <string name="collegiateStatementThreeAccounting">
        •  Provide students with the knowledge and tools needed to obtain meaningful employment and have successful career in the accounting field.
    </string>
    <string name="collegiateStatementFourAccounting">
        •  Employ critical-thinking, analytical, and problem-solving skills to resolve complex business and accounting issues.
    </string>
    <string name="collegiateStatementFiveAccounting">
        •  Provide students the educational requirements of various professional accounting certification examinations.
    </string>
    <string name="collegiateStatementSixAccounting">
        •  Identify the appropriate managerial and business issues critical in analyzing accounting data and other information used for identifying and assessing opportunities and risks, developing organizational plans, allocating resources, and accomplishing objectives.
    </string>
    <string name="collegiateStatementSevenAccounting">
        •  Apply relevant accounting principles and standards to specific business activities and workplace situations.
    </string>
    <string name="collegiateStatementEightAccounting">
        •  Employ national, international, and historical perspectives to analyze accounting and business issues.
    </string>
    <string name="collegiateStatementNineAccounting">
        •  Identify ethical issues associated with accounting and business situations and apply appropriate principles of ethics and civic responsibility.
    </string>
    <string name="collegiateStatementTenAccounting">
        •  Use analytical and research tools to monitor evolving accounting standards and practices and to maintain professional skills in a changing business environment.
    </string>
    <string name="collegiateStatementElevenAccounting">
        •  Apply the interpersonal and leadership skills expected of today’s accounting professional.
    </string>
</resources>