<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog"
>
    <!-- CLOSE BUTTON -->
    <LinearLayout
        android:id="@+id/CloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="8dp"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#xf177;"
            android:textSize="14sp"
            android:textColor="@color/slightDarkGreen"
            android:fontFamily="@font/font_awesome_6_free_solid_900"
            android:padding="8dp"
            android:layout_marginLeft="20dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BACK"
            android:textSize="14sp"
            android:textColor="@color/slightDarkGreen"
            android:fontFamily="@font/poppins_semibold"
        />
    </LinearLayout>

    <!-- CONTENTS -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar"
        android:fadeScrollbars="false"
        android:scrollbarSize="2dp"
        android:nestedScrollingEnabled="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="25dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <!-- MASTER IN BUSINESS ADMINISTRATION (MBA) [TITLE] -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BS Accountancy (BSA) and BS Management Accounting (BSMA)"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:background="@drawable/shadow_subheader_box"
                android:fontFamily="@font/poppins_semibold"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp"
                android:letterSpacing="0.03"
                android:lineHeight="33dp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:justificationMode="inter_word"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementOneAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:justificationMode="inter_word"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementTwoAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementThreeAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementFourAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementThreeAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementFiveAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementSixAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementSevenAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementEightAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementNineAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementTenAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_medium"
                android:lineHeight="30dp"
                android:text="@string/collegiateStatementElevenAccounting"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:paddingLeft="12dp"
            />
        </LinearLayout>
    </ScrollView>

</LinearLayout>