<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightWhiteGreen"
>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NCBA HYMN"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:background="@drawable/shadow_subheader_box"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="20dp"
        android:paddingVertical="20dp"
        android:letterSpacing="0.03"
    />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar"
        android:fadeScrollbars="false"
        android:scrollbarSize="5dp"
        android:nestedScrollingEnabled="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/poppins_medium"
                android:justificationMode="inter_word"
                android:lineHeight="28dp"
                android:text="@string/AboutUsNCBAHymnFirstStatement"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textAlignment="center"
                android:layout_gravity="center"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:lineHeight="28dp"
                android:text="@string/AboutUsNCBAHymnSecondStatement"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textAlignment="center"
                android:layout_gravity="center"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:lineHeight="28dp"
                android:text="@string/AboutUsNCBAHymnThirdStatement"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textAlignment="center"
                android:layout_gravity="center"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:lineHeight="28dp"
                android:text="@string/AboutUsNCBAHymnFourthStatment"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textAlignment="center"
                android:layout_gravity="center"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:lineHeight="28dp"
                android:text="@string/AboutUsNCBAHymnFifthStatment"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textAlignment="center"
                android:layout_gravity="center"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:lineHeight="28dp"
                android:text="@string/AboutUsNCBAHymnSixthStatment"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textAlignment="center"
                android:layout_gravity="center"
            />
        </LinearLayout>
    </ScrollView>

</LinearLayout>